web config to allow external (IP restricted) access

--- a/ansible/roles/dcm/templates/etc/lighttpd/lighttpd.conf.j2
+++ b/ansible/roles/dcm/templates/etc/lighttpd/lighttpd.conf.j2
@@ -7,7 +7,7 @@
 #######################################################################
 
 # refuse connections not from frontend or localhost
-$HTTP["remoteip"] !~ "{{ FRONTEND_IP }}" {
+$HTTP["remoteip"] !~ "{{ FRONTEND_IP }}|127.0.0.1" {
 url.access-deny = ("")
 }
 
