config and code changes for calling dataverse api endpoint

--- a/ansible/roles/dcm/templates/root/.bashrc.j2
+++ b/ansible/roles/dcm/templates/root/.bashrc.j2
@@ -12,3 +12,5 @@ if [ -f /etc/bashrc ]; then
 fi
 
 export UPLOADHOST={{ UPLOADHOST }}
+export DVAPIKEY={{ DVAPIKEY }}
+export DVHOSTINT={{ DVHOSTINT }}
