update bashrc template

--- a/ansible/roles/dcm/templates/root/.bashrc.j2
+++ b/ansible/roles/dcm/templates/root/.bashrc.j2
@@ -14,3 +14,4 @@ fi
 export UPLOADHOST={{ UPLOADHOST }}
 export DVAPIKEY={{ DVAPIKEY }}
 export DVHOSTINT={{ DVHOSTINT }}
+export DVHOST={{ DVHOST }}
