enable breakage log in lighttpd by default

--- a/ansible/roles/dcm/templates/etc/lighttpd/lighttpd.conf.j2
+++ b/ansible/roles/dcm/templates/etc/lighttpd/lighttpd.conf.j2
@@ -10,7 +10,7 @@
 $HTTP["remoteip"] !~ "{{ FRONTEND_IP }}|127.0.0.1" {
 url.access-deny = ("")
 }
-
+server.breakagelog = "/var/log/lighttpd/breakage.log"
 
 #######################################################################
 ##
